# concordpp

./: .gitmodules  CMakeLists.txt  README.md  issues.md
application/: main.cpp
include/: api.h  client.h  concordpp.h  eventhandler.h  gateway_client.h  rest_client.h  wsconn.h  wsstate.h
include/gateway/: callback.h  callback_handler.h  command.h  web_socket.h
include/internal/: debug.h
include/rest/: api_call.h
old/: main.cpp
old/include/: client.h
old/include/gateway/: wsconn.h
old/include/rest/: webapi.h
old/src/: client.cpp
old/src/gateway/: wsconn.cpp
old/src/rest/: webapi.cpp
src/: api.cpp  client.cpp  eventhandler.cpp  gateway_client.cpp  main.cpp  rest_client.cpp  wsconn.cpp
src/gateway/: callback.cpp  callback_handler.cpp  command.cpp  web_socket.cpp
src/internal/: debug.cpp
src/rest/: api_call.cpp  channel.cpp  guild.cpp  user.cpp
